<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.aibyjohannes.alfred.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.aibyjohannes.alfred.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_settings_models"
        android:name="com.aibyjohannes.alfred.ui.settings.ModelSettingsFragment"
        android:label="@string/settings_models_title"
        tools:layout="@layout/fragment_settings_models" />

    <fragment
        android:id="@+id/nav_settings_tools"
        android:name="com.aibyjohannes.alfred.ui.settings.ToolSettingsFragment"
        android:label="@string/settings_tools_title"
        tools:layout="@layout/fragment_settings_tools" />

    <fragment
        android:id="@+id/nav_onboarding"
        android:name="com.aibyjohannes.alfred.ui.onboarding.OnboardingFragment"
        android:label="Onboarding"
        tools:layout="@layout/fragment_onboarding" />
</navigation>